# my_family_tree_gramps

./: .gitignore  CHANGELOG.md  README.md  gramps_html.sh  knuthp.gramps  knuthp.xml  pyproject.toml
.github/workflows/: gramps.yml
css/: gramps_screen.css  narrative-screen.css
scripts/: gramps  gramps_export  gramps_html
src/my_family_tree/: nbdownloader.py
