[tool.poetry]
name = "my-family-tree"
version = "0.1.0"
description = "Tools for genealogy research related"
authors = ["Knut H Pedersen <knuthp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
typer = "^0.12.4"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nbdownloader = "my_family_tree.nbdownloader:app"